--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\201511111234060_Permissoes.Designer.cs">
       <DependentUpon>201511111234060_Permissoes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511112308254_Update-fix1.cs" />
+    <Compile Include="Migrations\201511112308254_Update-fix1.Designer.cs">
+      <DependentUpon>201511112308254_Update-fix1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PermissaoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -93,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511111234060_Permissoes.resx">
       <DependentUpon>201511111234060_Permissoes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511112308254_Update-fix1.resx">
+      <DependentUpon>201511112308254_Update-fix1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
