--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
@@ -58,6 +58,10 @@
     <Compile Include="Migrations\201511121806313_SeloId.Designer.cs">
       <DependentUpon>201511121806313_SeloId.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511122123570_ClienteFix.cs" />
+    <Compile Include="Migrations\201511122123570_ClienteFix.Designer.cs">
+      <DependentUpon>201511122123570_ClienteFix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Repositorios\ClienteRepositorio.cs" />
     <Compile Include="Repositorios\JogoRepositorio.cs" />
     <Compile Include="Migrations\201511091915292_Initial.cs" />
@@ -121,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511121806313_SeloId.resx">
       <DependentUpon>201511121806313_SeloId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511122123570_ClienteFix.resx">
+      <DependentUpon>201511122123570_ClienteFix.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
