--- a/src/modulo-05-java/lavanderia/src/main/resources/application.properties
+++ b/src/modulo-05-java/lavanderia/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.thymeleaf.cache=false
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=LAVANDERIA2
 spring.datasource.password=LAVANDERIA2
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
