--- a/src/modulo-05-java/lavanderia/pom.xml
+++ b/src/modulo-05-java/lavanderia/pom.xml
@@ -30,6 +30,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
 			<version>1.3.1</version>
@@ -72,7 +78,7 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
 		</dependency>
-		
+
 	</dependencies>
 
 	<build>
